Bug 145523 - Make slow script message localisable. r/sr=jst p=bugmail@q1n.org (Vidar Braut Haarr)